tests/error/linear_errors/tuple_use_index2.err
Error: Copy violation (at $FILE:17:11)
   | 
15 |     s = S((qubit(), 1))
16 |     use(s.t[0])
17 |     return s
   |            ^ Variable `s` with non-copyable type `S` cannot be returned
   |              ...

Note:
   | 
15 |     s = S((qubit(), 1))
16 |     use(s.t[0])
   |         ------ ... since the member `s.t[0]` with non-copyable type `qubit`
   |                was already consumed here

Guppy compilation failed due to 1 previous error
